--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev -p 5000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 5000",
+    "start": "next start",
     "lint": "next lint",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
@@ -71,6 +71,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "monaco-editor": "^0.52.2",
     "nanoid": "^5.1.5",
     "next": "^15.0.3",
     "next-auth": "^4.24.11",
@@ -89,6 +90,7 @@
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
