--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "monaco-editor": "^0.52.2",
+    "mysql2": "^3.14.1",
     "nanoid": "^5.1.5",
     "next": "^15.0.3",
     "next-auth": "^4.24.11",
@@ -91,6 +92,7 @@
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.15.1",
     "sonner": "^2.0.3",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
